@@ -848,24 +848,24 @@ class ModelSQL(ModelStorage):
             else:
                 for sub_results in grouped_slice(result, cache_size()):
                     sub_results = list(sub_results)
-                    sub_ids = [r['id'] for r in sub_results
-                        if (r['id'] not in cache
-                            or any(f not in cache[r['id']]
-                                for f in field_list))]
+                    sub_ids = []
                     for row in sub_results:
-                        for fname in field_list:
-                            if row['id'] not in sub_ids:
+                        if (row['id'] not in cache
+                                or any(f not in cache[row['id']]
+                                    for f in field_list)):
+                            sub_ids.append(row['id'])
+                        else:
+                            for fname in field_list:
                                 row[fname] = cache[row['id']][fname]
                     getter_results = field.get(
                         sub_ids, cls, field_list, values=sub_results)
-                    for row in sub_results:
-                        for fname in field_list:
-                            getter_result = getter_results[fname]
+                    for fname in field_list:
+                        getter_result = getter_results[fname]
+                        for row in sub_results:
+                            row[fname] = getter_result[row['id']]
                             if row['id'] in sub_ids:
                                 row[fname] = getter_result[row['id']]
                                 if transaction.readonly:
-                                    if row['id'] not in cache:
-                                        cache[row['id']] = {}
                                     cache[row['id']][fname] = row[fname]
 
         def read_related(field, Target, rows, fields):
